// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FailureUserInput - { command: 'whoami' } > OUTPUT FORMAT: JSON 1`] = `
::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode-----------------------------------------:
1
stderr-------------------------------------------:
__NONE__
stdout-------------------------------------------:
{
  "data": {
    "type": "FailureUserInput",
    "parameter": "registry.accessToken"
  },
  "type": "failure",
  "reference": null,
  "suggestions": [],
  "warnings": []
}
promise------------------------------------------:
rejected
::::::::::::::::::::::::::::::::::::::::::::::::::
`;

exports[`FailureUserInput - { command: 'whoami' } > OUTPUT FORMAT: TEXT 1`] = `
::::::::::::::: CLI FAILURE OUTPUT :::::::::::::::
exitCode-----------------------------------------:
2
stderr-------------------------------------------:
 ›   Error: --registry.accessToken is required. For help generating an access
 ›   token, see https://__URL__
 ›   stry-access-tokens
stdout-------------------------------------------:
__NONE__
promise------------------------------------------:
rejected
::::::::::::::::::::::::::::::::::::::::::::::::::
`;
